test/fail/opt_cast04.v3
//@execute 0=11
//@optimize cast-elimination
class opt_cast04a {
	def a = 11;
}
component opt_cast04 {
	def main(arg: int) -> int {
		return opt_cast04a.!(opt_cast04a.new()).a;
	}
}
